# movie-recommender

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/dependencies/: data_loader.py  tmdb.py
backend/routes/: movie_router.py  recommend_router.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  MovieCard.jsx  MovieDropdown.jsx  RecommendButton.jsx  Results.jsx  SearchInput.jsx
frontend/src/hooks/: UseMovies.jsx
frontend/src/service/: api.js
training/: helper_functions.py  preprocesing.py  recommend.py  similarity_vector.py  test.py
